# feasting

./: .gitignore  docker-compose.yml  readme.md
data_producer/: config.yaml  go.mod  go.sum  main.go  main.py  pyproject.toml
data_producer/cmd/: print_config.go  root.go  seq_load.go
data_producer/internal/config/: config.go
data_producer/internal/data_types/: dataset_event.go  interfaces.go
data_producer/internal/event_generator/: event_sender.go  process_parquet_file.go
data_producer/internal/kafkautils/: send_to_kafka.go
data_producer/internal/utils/: file_finder.go
dataset_processing/: checks.ipynb  pyproject.toml  sample_processor.ipynb  split_dataset.ipynb
dataset_processing/docs/: Загрузка проверочных данных в ch.md
oltp_processor/: pyproject.toml
oltp_processor/config/: config.yaml
oltp_processor/src/: alembic.ini  config.py  consumer.py  data_types.py  db.py  main.py  models.py
oltp_processor/src/alembic/: env.py
oltp_processor/src/alembic/versions/: 681bef7f2ec0_initial.py
