[project]
name = "oltp-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "prettyprinter>=0.18.0",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.44",
]
